--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Tic Tac Toe game</string>
+    <string name="play_again">Play Again!</string>
 </resources>
